[gd_scene load_steps=23 format=3 uid="uid://c8bydekkhr5m4"]

[ext_resource type="Script" path="res://scripts/Characthers/Prototype/Level3/Enemy_Blue_Pipe.gd" id="1_22ik2"]
[ext_resource type="Texture2D" uid="uid://cj21mxonxa3cx" path="res://sprites/Monster/monster1_Blue_sprite.png" id="2_u3qrc"]
[ext_resource type="AudioStream" uid="uid://bw3djxfntr0jb" path="res://sounds/SFX/Monster/monster_die.wav" id="3_4l37k"]
[ext_resource type="AudioStream" uid="uid://bud3mha4g5u45" path="res://sounds/SFX/Monster/monster_bite.wav" id="4_pk5c8"]
[ext_resource type="FontFile" uid="uid://b6b3cu5hbka6f" path="res://fonts/Hey Comic.otf" id="5_bq0q5"]
[ext_resource type="Texture2D" uid="uid://bayk5vbjbveut" path="res://images/EnemiesIcon/Tri√¢ngulo.png" id="6_1ppkl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i4qyf"]
atlas = ExtResource("2_u3qrc")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_q54c4"]
atlas = ExtResource("2_u3qrc")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s2en"]
atlas = ExtResource("2_u3qrc")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2yij"]
atlas = ExtResource("2_u3qrc")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yguv"]
atlas = ExtResource("2_u3qrc")
region = Rect2(2048, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue6fk"]
atlas = ExtResource("2_u3qrc")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox4bv"]
atlas = ExtResource("2_u3qrc")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy6fr"]
atlas = ExtResource("2_u3qrc")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_75dsm"]
atlas = ExtResource("2_u3qrc")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh14w"]
atlas = ExtResource("2_u3qrc")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_6gmfw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4qyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q54c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s2en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2yij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yguv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue6fk")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox4bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy6fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75dsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh14w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hltyo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_js5y0"]
bg_color = Color(0.0235294, 0.384314, 0.709804, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_8ro1c"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_6g00w"]
viewport_path = NodePath("SubViewport2")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0of21"]
margin = 2.871
radius = 0.587145
height = 3.07399

[node name="Enemy" type="CharacterBody3D" groups=["blue", "enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 8
collision_mask = 2051
platform_on_leave = 2
platform_floor_layers = 4294967041
platform_wall_layers = 1
script = ExtResource("1_22ik2")
move_speed = 15.0
minimum_distance = 15

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(-3.65853e-08, 0, -0.836973, 0, 0.836973, 0, 0.836973, 0, -3.65853e-08, 0, 0, 0)
pixel_size = 0.0076
billboard = 2
sprite_frames = SubResource("SpriteFrames_6gmfw")
animation = &"idle"
autoplay = "idle"

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_4l37k")
volume_db = 5.0
unit_size = 2.0
bus = &"SFX"
emission_angle_degrees = 90.0

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0

[node name="MonsterBite" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_pk5c8")
bus = &"SFX"

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="SubViewport"]
offset_right = 128.0
offset_bottom = 27.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("5_bq0q5")
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_hltyo")
theme_override_styles/fill = SubResource("StyleBoxFlat_js5y0")
max_value = 15.0
value = 15.0
show_percentage = false

[node name="Label" type="Label" parent="SubViewport/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_bq0q5")
theme_override_font_sizes/font_size = 35

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = -0.1
path_max_distance = 5.01
neighbor_distance = 10.0
max_neighbors = 4
time_horizon_agents = 0.0
max_speed = 15.0
use_3d_avoidance = true
avoidance_layers = 4
avoidance_mask = 5

[node name="SubViewport2" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Symbol" type="Sprite2D" parent="SubViewport2"]
texture = ExtResource("6_1ppkl")
centered = false

[node name="IconControl" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="IconControl"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.833375, 0.370634, 0.0253874)
billboard = 1
texture = SubResource("ViewportTexture_8ro1c")

[node name="Sprite3D2" type="Sprite3D" parent="IconControl"]
transform = Transform3D(0.529244, 0, 0, 0, 0.529244, 0, 0, 0, 0.529244, 0.919687, 0.862516, -0.155986)
billboard = 1
texture = SubResource("ViewportTexture_6g00w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0of21")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -30)
collision_mask = 2051

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
